# OpenArc

./: .cursorignore  .dockerignore  .gitignore  AGENTS.md  Battlemage.Dockerfile  CONTRIBUTING-wip.md  CONTRIBUTING.md  Dockerfile  Dockerfile.v2  README.md  brazil_man.md  cb_hammer_inprocess.csv  cb_hammer_zmq.csv  docker-compose.v2.yml  docker-compose.yaml  dockerREADME.md  environment.yaml  mkdocs.yml  openarc-bench.db  openarc-cli-config.yaml  openarc-cli.py  openarc_bench.db  openarc_cli.py  project.md  pyproject.toml  qwen3_tts_example.py  setup.bat  setup.sh  start_dashboard.py  start_server.py  test_gpu_metrics.py  zensical.toml
.devops/: Battlemage.Dockerfile  docker-compose.yaml
.github/workflows/: build-container-image.yaml  docs.yml  jekyll-gh-pages.yml  run-unit-tests.yml
.gradio/flagged/: dataset1.csv
benchmark/: context_overflow.py
demos/: openai_smolagent.py  qwen3_asr_transcribe.py  qwen3_tts_example.py  talk_to_llm.py  whisper_button.py
demos/hf_explorer/: hf_agent.py  hf_tools.py
demos/smolagents/: smolagent_python_interpreter.py
docs/: acknowledgments.md  command_line.md  commands.md  convert_to_openvino.md  converting.md  features.md  firststeps.md  home.md  index.md  install.md  kubernetes.md  models.md  openai_tool_calling_serverside_requirements.md  openarc_load.md  openarc_server.md  openvino_ir.md  openvino_qwen3.md  openvino_utils.ipynb  performance_dump.md  resources.md  server.md
docs/architecture/: index.md  inference.md  model_registration.md  worker_orchestration.md
docs/cli/: add.md  bench.md  index.md  list.md  load.md  serve.md  status.md  tool.md
docs/models/: embedding.md  index.md  kokoro.md  llms.md  reranker.md  vlms.md  whisper.md
docs/ov_config/: _README.md  inference_num_threads.md  scheduling_core_type.md
docs/quickstart/: docker.md  index.md  linux.md  windows.md
docs/tools/: ov_device_data.md  ov_device_query.md  working_with_intel_devices.md
examples/: openai_tool_calling_example.py  ov_genai_AutoTokenizer.py
examples/nncf/: nncf_compress_fp8.py  vlm_sdpa_export.py
examples/openvino/: inspect_openvino_ir_graph_ops.py  openvino_compile_model.py  openvino_kokoro.py
examples/openvino_genai/: ov_genai_AutoTokenizer.py  ov_genai_speculative_decode.py  ov_genai_vlm_autotokenizer.py
examples/optimum/: optimum_quantization.ipynb  optimum_text_model_card.py  optimum_vision_model_card.py
examples/utilities/: evaluate_tokenization_round_trip.py  split_openvino_bin.py
gpu-metrics/: gpu_metrics.cpp  pyproject.toml  setup.py
models/: clone_models_for_automated_tests
scripts/benchmark/: chat_metrics.py  continuos_batch_throughput_hack.py  ov_genai.py  ov_genai_continuous_batch_multi_turn.py  ov_genai_hf_tokenizer.py  ov_genai_streaming_overhead_profile.py  ov_simple_bench.py  ov_simple_text_bench.py  ov_text_model_card.py  ov_vision.ipynb  ov_vision_model_card.py
scripts/convert_model/: ov_kokoro.py
scripts/examples/: async_workers.py  optimum_decoder.py  ov-genai_speculative_decoder_bench.py  ov_genai_continuous_batch.py  ov_genai_continuous_batch_multi_turn.py  ov_genai_speculative_decoder_bench.py  ov_text_model_card.py  ov_vision.ipynb  ov_vision_model_card.py  smolagents.py  text_model_card.py
scripts/requests/: generate_text.sh  generate_vision.sh  get_models.sh  load_model.sh  load_vision.sh  openai_like_completion.sh  status.sh  (+3 more)
site/: 404.html  index.html  search.json
src/: __init__.py  start_optimum_api.py
src2/: __init__.py
tests/: test_cb_integration.py  test_cb_registration.py  test_cb_router.py  test_cb_worker.py
(+334 files in other folders)
