[project]
name = "OpenArc"
version = "2.0"
description = "OpenArc is an inference server for OpenVINO AI models."
authors = [
    {name = "Emerson Tatelbaum", email = "etatelbaum.psc@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "click>=8.2.1",
    "fastapi>=0.116.1",
    "kokoro>=0.9.4",
    "librosa>=0.11.0",
    "misaki[en]>=0.9.4",
    "openai>=1.109.1",
    "openvino-genai>=2025.2.0.0",
    "optimum[openvino]>=1.26.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "rich-click>=1.8.9",
    "torchvision>=0.23.0",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project.scripts]
openarc = "cli.openarc_cli:cli"

[tool.uv]
dev-dependencies = []
package = true
