[project]
name = "OpenArc"
version = "2.0"
description = "OpenArc is an inference server for OpenVINO AI models."
authors = [
    {name = "Emerson Tatelbaum", email = "etatelbaum.psc@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.11"

dependencies = [
    "click>=8.2.1",
    "fastapi>=0.116.1",
    "huggingface-hub[cli]>=0.33.4",
    "kokoro>=0.9.4",
    "librosa>=0.11.0",
    "misaki[en]>=0.9.4",
    "openai>=1.109.1",
    "openvino-genai>=2025.3.0.0",
    "optimum[openvino]>=1.26.1",
    "pydantic>=2.11.7",
    "pyyaml>=6.0.2",
    "rich-click>=1.8.9",
    "torch>=2.6.0",
    "torchvision>=0.23.0",
    "uvicorn>=0.35.0",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[project.scripts]
openarc = "src.cli.openarc_cli:cli"

[tool.uv]
dev-dependencies = []
package = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }


