[project]
name = "OpenArc"
version = "2.0.5"
description = "OpenArc is an inference server for OpenVINO AI models."
authors = [
    {name = "Emerson Tatelbaum", email = "etatelbaum.psc@gmail.com"}
]

readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "click>=8.2.1",
    "ddgs>=9.6.1",
    "fastapi>=0.116.1",
    "huggingface-hub[cli]>=0.33.4",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "kokoro>=0.9.4",
    "librosa>=0.11.0",
    "misaki[en]>=0.9.4",
    "openai>=2.2.0",
    "openai-agents>=0.4.2",
    "openvino-genai>=2026.2",
    "optimum[openvino]>=2.2.0",
    "pip>=25.2",
    "pybind11>=3.0.4",
    "pydantic>=2.11.7",
    "pynput>=1.8.1",
    "pyyaml>=6.0.2",
    "rich-click>=1.8.9",
    "smolagents>=1.22.0",
    "sounddevice>=0.5.2",
    "soundfile>=0.13.1",
    "torch>=2.11.0",
    "torchvision>=0.26.0",
    "uvicorn>=0.35.0",
    "zensical>=0.0.31",
]

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "pytest-asyncio>=1.4.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["src", "src.*"]

[project.scripts]
openarc = "src.cli:cli"

[tool.uv]
package = true

[[tool.uv.index]]
name = "pytorch-cpu" 
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }

[tool.pytest.ini_options]
minversion = "8.0"
addopts = "-ra --strict-markers --strict-config"
testpaths = [
    "tests/unit"
]

